adding a name and a description to the composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "hex/hexyway",
+    "description": "The HEXYWAY framework",
     "autoload": {
         "classmap": [
             "./"
