--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         ]
     },
     "require": {
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "nikic/fast-route": "^1.3"
     }
 }
